# automation

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  browser_automation.py  install_reminder_app.sh  pyproject.toml  reminder.py  requirements.txt
.github/workflows/: ci.yml  claude.yml
reminder/: __init__.py  __main__.py  app.py  config.py  notifications.py  time_utils.py
tests/: __init__.py  conftest.py  test_reminder.py
